# BeatTheMarket

./: README.md  alert_system.py  app.py  chart_generator.py  data_fetcher.py  decision_engine.py  enhanced_analysis.py  financial_data.py  financial_wellness.py  indicator_explanations.py  market_overview.py  options_analysis.py  pattern_recognition.py  pyproject.toml  sector_analysis.py  send_message.py  stock_groups_cache.json  stock_groups_cache.py  technical_analysis.py  watchlist.json  youtube_integration.py
