[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.1",
    "beautifulsoup4>=4.13.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "twilio>=9.6.1",
    "yfinance>=0.2.61",
]
